fix Product Itm TD top align

--- a/src/components/Products/ProducItm.css
+++ b/src/components/Products/ProducItm.css
@@ -16,3 +16,8 @@ table td {
   display: table-cell;
   vertical-align: top; 
 }
+
+.ProductItemTD {
+  display: table-cell;
+  vertical-align: top; 
+}
